<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">
        <!--android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content">
            <AutoCompleteTextView android:id="@+id/name"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:textColorHint="@color/titleColor"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textCursorDrawable="@null"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView android:id="@+id/email"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/titleColor"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:textCursorDrawable="@null"/>

        </android.support.design.widget.TextInputLayout-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/johnDoe"
            android:textSize="@dimen/titleText"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:textColor="@color/titleColor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailJohn"
            android:textSize="@dimen/subHeadText"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:textColor="@color/descriptionColor"/>
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView android:id="@+id/address"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/promt_address"
                android:textColorHint="@color/titleColor"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:textCursorDrawable="@null"/>

        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ageGroup"
                android:layout_marginBottom="4dp"
                android:textColor="@color/titleColor"
                android:textSize="@dimen/titleText"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton android:id="@+id/radio_credit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creditCard"
                    android:onClick="onAgeRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_debit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debitCard"
                    android:onClick="onAgeRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_net"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/netBanking"
                    android:onClick="onAgeRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_cod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cod"
                    android:onClick="onAgeRadioButtonClicked"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deliverPackageBack"
                android:layout_marginBottom="4dp"
                android:textColor="@color/titleColor"
                android:textSize="@dimen/titleText"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_delivery_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:onClick="onDeliverClicked"/>
                <RadioButton android:id="@+id/radio_delivery_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:onClick="onDeliverClicked"/>
            </RadioGroup>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/buyBtn"
            android:layout_marginTop="16dp"
            android:text="Deliver/Pay Now"
            android:padding="8dp"
            android:textSize="@dimen/titleText"/>
    </LinearLayout>
</LinearLayout>